spacing between inline-blocks elements removed, add event listener on header buttons and fixed vertical displacement with vertical-align

--- a/style.css
+++ b/style.css
@@ -16,13 +16,15 @@ header {
     border: darkorchid solid 1px;
     border-radius: 5px;
     background-color: cornflowerblue;
+    letter-spacing: -1em; /* Corrige el espaciado por defecto ocasionado por el inline-block */
 }
 
 .header-block {
     min-width: 39rem;
     /* border: red solid 1px; */
     display: inline-block;
-    /* margin: 0; */
+    vertical-align: top; /* Corrige el desfase vertical de bloques inline-block */
+    letter-spacing: normal; /* Restituye el efecto de la corrección del espaciado en el inline-block */
 }
 
 h2 {
@@ -37,7 +39,16 @@ h2 {
     display: inline-block;
 }
 
-/* #user-name, #name-h {
+#user-name {
+    margin-bottom: 6px;
+}
+
+/* #test {
+    position: relative;
+    top: 6px;
+} */
+
+/* #user-name, #name-h, .header-text, .header-label, .header-inputs {
     border: groove 1px gray;
 } */
 
@@ -46,11 +57,24 @@ h2 {
     font-size: large;
 }
 
-.header-button {
+#header-inputs-2 {
+    margin-bottom: 4px;
+}
+
+.header-button, .header-label {
     /* background-color: cornflowerblue; */
     font-size: medium;
     font-weight: bold;
     color: black;
+}
+
+.header-inputs {
+    padding: 2px;
+}
+
+.header-input {
+    width: 122px;
+    /* margin-left: 180px; */ /* si el bloque de inputs está debajo de los botones */
 }
 
 #blocks-container {
@@ -67,9 +91,10 @@ h2 {
     background: peachpuff;
     display: inline-block;
     /* padding-bottom: 1.35em; */
-    /* margin: 0; */
     /* max-height: 20rem; */
     min-height: 20rem;
+    vertical-align: top; /* Corrige el desfase vertical de bloques inline-block */
+
 }
 
 .title {
@@ -80,7 +105,6 @@ h2 {
 }
 
 h3.title {
-    /* margin: 0; */
     margin-left: 2px;
     padding-left: 1px;
 }
@@ -90,7 +114,6 @@ input.title-i {
 }
 
 ol {
-    /* margin: 0 0 15px 0; */
     /* height: 20rem; */
     margin-bottom: 15px;
 }
